# zed

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo_bench.toml  README.md  tarpaulin.toml
.github/workflows/: ci.yml
benches/: component_benchmarks.rs  state_mesh_benchmarks.rs  store_benchmarks.rs  timeline_benchmarks.rs
examples/: example_advanced_todo.rs  example_capsule.rs  example_collaborative_editor.rs  example_reactive.rs  example_redux.rs  example_state_mesh.rs  example_timeline.rs
src/: capsule.rs  configure_store.rs  create_slice.rs  lib.rs  main.rs  prelude.rs  reactive.rs  reducer.rs  simple_cache.rs  state_mesh.rs  store.rs  timeline.rs
tests/: capsule_tests.rs  comprehensive_integration_tests.rs  configure_store_tests.rs  edge_cases_tests.rs  error_handling_tests.rs  examples_tests.rs  integration_tests.rs  reactive_tests.rs  reducer_tests.rs  simple_cache_tests.rs  slice_tests.rs  state_mesh_tests.rs  store_tests.rs  timeline_tests.rs
zed-test/: Cargo.toml
