[package]
name = "zed"
version = "0.1.16"
edition = "2024"
description = "A minimal, Redux-like state management library for Rust with advanced features."
license = "MIT"
repository = "https://github.com/brenogonzaga/zed"
homepage = "https://github.com/brenogonzaga/zed"
documentation = "https://docs.rs/zed"
readme = "README.md"
keywords = ["state-management", "redux", "rust", "immutable", "flux"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
