[package]
name = "zed"
version = "0.1.17"
edition = "2024"
description = "A minimal, Redux-like state management library for Rust with advanced features."
license = "MIT"
repository = "https://github.com/brenogonzaga/zed"
homepage = "https://github.com/brenogonzaga/zed"
documentation = "https://docs.rs/zed"
readme = "README.md"
keywords = ["state-management", "redux", "rust", "immutable", "flux"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "store_benchmarks"
harness = false

[[bench]]
name = "timeline_benchmarks"
harness = false

[[bench]]
name = "state_mesh_benchmarks"
harness = false
